--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	<meta name="description" content="Clone pagina do instagram projeto educacional">
 	<meta name="keywords" content="Clone do Instagram">
 	<!-- Title -->
-	<title>Clone Instagram Projeto Educacional</title>
+	<title>Login - Entrar no Instagram</title>
 	<!-- Style Interno -->
 	<style>
-		/* Module Bootstrap Import */
+		/* Bootstrap 5 Import */
 		@import "./node_modules/bootstrap/dist/css/bootstrap.css";
 
 		/* Import Fonts Google */
